force-app/main/default/objects/Comercio_Afiliado__c/Comercio_Afiliado__c.object-meta.xml
<CustomObject>
    <label>Comercio Afiliado</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comercios Afiliados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>