force-app/main/default/objects/Comercio_Afiliado__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <displayFormat>CA-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Código</label>
    <type>AutoNumber</type>
</CustomField>