force-app/main/default/objects/Comercio_Afiliado__c/fields/Descuento_activo__c.field-meta.xml
<CustomField>
    <fullName>Descuento_activo__c</fullName>
    <label>Descuento activo</label>
    <summarizedField>Descuento__c.Porcentaje_descuento__c</summarizedField>
    <summaryFilterItems>
        <field>Descuento__c.Activo__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Descuento__c.Comercio_Afiliado__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>