force-app/main/default/objects/Comercio_Afiliado__c/fields/Rubro__c.field-meta.xml
<CustomField>
    <fullName>Rubro__c</fullName>
    <label>Rubro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supermercado</fullName>
            </value>
            <value>
                <fullName>Restaurante</fullName>
            </value>
            <value>
                <fullName>Salud y Belleza</fullName>
            </value>
            <value>
                <fullName>Entretenimiento</fullName>
            </value>
            <value>
                <fullName>Tiendas y Hogar</fullName>
            </value>
            <value>
                <fullName>Turismo</fullName>
            </value>
            <value>
                <fullName>Automotriz</fullName>
            </value>
            <value>
                <fullName>Promociones y Eventos  Especiales</fullName>
            </value>
            <value>
                <fullName>Educación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>